manifests/applications/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: hello-world
  labels:
    app: hello-world
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  selector:
    app: hello-world
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30082
    protocol: TCP
  type: NodePort
